[tool.poetry]
name = "streamlit_test"
version = "0.1.0"
description = ""
authors = ["LuMe <going3489.dev.qm7eo@slmail.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
